feat(cn-browse): Implement Indexing and Re-indexing Mechanisms for Call-Numbers (#707)
Closes: MSEARCH-864
(cherry picked from commit 24bae72d71152c0b91bd55adf917333448e6de57)